--- a/src/pages/BreedItem/BreedItem.css
+++ b/src/pages/BreedItem/BreedItem.css
@@ -1,12 +1,5 @@
-.image {
-    cursor: pointer;
-    display: inline-block;
-    width: 100%;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+.container {
+    padding-top: 50px;
 }
 
 .span {
@@ -14,12 +7,8 @@
     font-size: 1.25rem;
 }
 
-.image-list{
-    height: 70vh;
-}
-
-.box {
+.breed-image {
+    box-shadow:5px 6px 8px #000;
+    border-radius:20px;
     width: 100%;
-    height: 90vh;
-    margin: 5vh auto;
 }
