--- a/src/pages/Votes/Votes.css
+++ b/src/pages/Votes/Votes.css
@@ -18,7 +18,7 @@
     align-items: center;
   }
   
-  img {
+  .img {
     width: 100%;
     height: 100%;
     display: block;
@@ -46,5 +46,9 @@
   }
   .button-prev {
     left: 10px;
+  }
+
+  .css-gcc2o7-MuiButton-startIcon>*:nth-of-type(1) {
+    font-size: 30px;
   }
   
