--- a/src/pages/Votes/Votes.css
+++ b/src/pages/Votes/Votes.css
@@ -1,54 +1,68 @@
 .swiper {
-    max-width: 800px;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .swiper-wrapper {
-    width: 100%;
-    height: 300px;
-  }
-  
-  .swiper-slide {
-    width: 300px;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    object-fit: cover;
-  }
-  
-  .button-next,
-  .button-prev {
-    position: absolute;
-    top: 50%;
-    width: 50px;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #FFCF32;
-    transform: translateY(-50%);
-    cursor: pointer;
-    z-index: 10;
-  }
-  :is(.button-next, .button-prev):hover {
-    background-color: #FFCF32;
-  }
-  
-  .button-next {
-    right: 10px;
-  }
-  .button-prev {
-    left: 10px;
-  }
+  max-width: 800px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-wrapper {
+  width: 100%;
+  height: 300px;
+}
 
-  .css-gcc2o7-MuiButton-startIcon>*:nth-of-type(1) {
-    font-size: 30px;
-  }
-  
+.swiper-slide {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.button-next,
+.button-prev {
+  position: absolute;
+  top: 50%;
+  width: 50px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #ffcf32;
+  transform: translateY(-50%);
+  cursor: pointer;
+  z-index: 10;
+}
+:is(.button-next, .button-prev):hover {
+  background-color: '#F7E4A8';
+}
+
+.button-next {
+  right: 10px;
+  border-radius: 20%;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+}
+.button-prev {
+  left: 10px;
+  border-radius: 20%;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+}
+
+img {
+  display: flex;
+}
+
+.css-gcc2o7-MuiButton-startIcon > *:nth-of-type(1) {
+  font-size: 30px;
+}
+
