--- a/src/pages/Votes/Votes.css
+++ b/src/pages/Votes/Votes.css
@@ -1,6 +1,8 @@
 .swiper {
-  max-width: 800px;
-  height: 500px;
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,13 +18,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-position: center;
+  background-size: cover;
 }
 
-.img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
+.swiper-slide img:hover {
+  box-shadow: 4px 4px 0 0 #a239f4;
 }
 
 .button-next,
@@ -30,13 +31,19 @@
   position: absolute;
   top: 50%;
   width: 50px;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 4px 10px;
   background-color: #ffcf32;
+  box-shadow: 2px 2px 0 0 #212121;
   transform: translateY(-50%);
   cursor: pointer;
   z-index: 10;
 }
+
+.button-next:hover,
+.button-prev:hover {
+  box-shadow: 2px 2px 0 0 #a239f4;
+}
+
 :is(.button-next, .button-prev):hover {
   background-color: '#F7E4A8';
 }
@@ -58,11 +65,7 @@
   -o-border-radius: 20%;
 }
 
-img {
+.button-next img,
+.button-prev img {
   display: flex;
 }
-
-.css-gcc2o7-MuiButton-startIcon > *:nth-of-type(1) {
-  font-size: 30px;
-}
-
