--- a/src/pages/Votes/Votes.css
+++ b/src/pages/Votes/Votes.css
@@ -1,8 +1,7 @@
 .swiper {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  height: 70vh;
+  padding: 30px 0;
+  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
